--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class="dropdown" style="float:right;">
   <button class="dropbtn"><img src="imagens/menu.png" style="width: 25px; height: 20px"></button>
   <div class="dropdown-content">
-  <a href="comojogar.html">Como Jogar</a>
+  <a href="comojogar.html" target="_black">Como Jogar</a>
   <a href="sobre.html">Sobre</a>
-  <a href="https://youtu.be/ihW56Xa3XGQ">Música Maneira</a>
+  <a href="https://youtu.be/ihW56Xa3XGQ" target="_black">Música Maneira</a>
   </div>
 </div>
     <div id="textoacima">Velha Gagá 1.0</div>
